--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,14 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-cache')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-jooq')
-	implementation('org.springframework.boot:spring-boot-starter-security')
+	//implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.liquibase:liquibase-core')
-	
+	implementation('org.zalando:problem-spring-web:0.23.0')
+	implementation('org.zalando:problem-violations:0.24.0-RC.0')
+	implementation('io.github.jhipster:jhipster:1.3.1')
+
+
 	runtimeOnly('mysql:mysql-connector-java')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
